[package]
name = "ports-info"
version = "0.1.0"
edition = "2021"
authors = ["mFat"]
license = "GPL-3.0"
description = "Ports Info - Listening Ports Information"

[dependencies]
gtk4 = "0.7"
adw = { version = "0.5", package = "libadwaita" }
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[build-dependencies]
glib-build-tools = "0.18"